  * Removed delta time argument from the update method of the MessageDispatcher; the new GdxAI.getTimepiece().getTime() is internally used instead.
  * Added return receipt support, see https://github.com/libgdx/gdx-ai/wiki/Message-Handling#return-receipt
  * The report method of PendingMessageCallback now takes an additional argument for the return receipt.
- API Change and Addition: Behavior tree API revised and improved, see https://github.com/libgdx/gdx-ai/wiki/Behavior-Trees
  * Now tasks have a status that is updated each time they run.
  * Added enum support in behavior tree files.
  * Now parallel task can specify sequence or selector policy.
  * Added cancel method for task termination, mainly used by the parallel task.
  * Now you can add listeners to the tree in order to be notified when a task has run and a child is added.
  * Now task methods setControl, success and fail are final.
  * Now method addChild is final and Task's subclasses have to implement addChildToTask.
  * Added decorator tasks Repeat and Random.
  * Added leaf tasks Failure, Success and Wait.
  * Added branch tasks RandomSelector and RandomSequence; removed deterministic attribute from Selector and Sequence. 
  * Now the UntilFail decorator succeeds when its child fails.
  * Added ability to clone tasks through third-party libraries like Kryo.
  * Added support for custom distributions in behavior tree files.

[1.6.0]
- Updated to libgdx 1.7.0
- API Change: now tasks take the blackboard object from the behavior tree they belong to.
- Fix: now the wander rate of the wander steering behavior is expressed in radian per second to make it frame rate independent.
- API Change: now behavior trees support annotations to define attributes and constraints in task classes.
- Fix: now the reach orientation behavior always chooses the shortest rotation angle.
- API Addition: added Formation Motion API, see https://github.com/libgdx/gdx-ai/wiki/Formation-Motion