@@ -21,37 +21,45 @@ import com.badlogic.gdx.utils.Array;
 /** A {@link StateMachine} implementation that keeps track of all previous {@link State}s via a stack. This makes sense for example
  * in case of a hierarchical menu structure where each menu screen is one state and one wants to navigate back to the main menu
  * anytime, via {@link #revertToPreviousState()}.
- * @param <E> is the type of the entity handled by this state machine.
+ * 
+ * @param <E> the type of the entity owning this state machine
+ * @param <S> the type of the states of this state machine
+ * 
  * @author Daniel Holderbaum */
-public class StackStateMachine<E> extends DefaultStateMachine<E> {
+public class StackStateMachine<E, S extends State<E>> extends DefaultStateMachine<E, S> {
 
-	private Array<State<E>> stateStack;
+	private Array<S> stateStack;
 
-	/** Creates a StackStateMachine for the specified owner.
+	/** Creates a {@code StackStateMachine} with no owner, initial state and global state. */
+	public StackStateMachine () {
+		this(null, null, null);
+	}
+
+	/** Creates a {@code StackStateMachine} for the specified owner.
 	 * @param owner the owner of the state machine */
 	public StackStateMachine (E owner) {
 		this(owner, null, null);
 	}
 
-	/** Creates a StackStateMachine for the specified owner and initial state.
+	/** Creates a {@code StackStateMachine} for the specified owner and initial state.
 	 * @param owner the owner of the state machine
 	 * @param initialState the initial state */
-	public StackStateMachine (E owner, State<E> initialState) {
+	public StackStateMachine (E owner, S initialState) {
 		this(owner, initialState, null);
 	}
 
-	/** Creates a StackStateMachine for the specified owner, initial state and global state.
+	/** Creates a {@code StackStateMachine} for the specified owner, initial state and global state.
 	 * @param owner the owner of the state machine
 	 * @param initialState the initial state
 	 * @param globalState the global state */
-	public StackStateMachine (E owner, State<E> initialState, State<E> globalState) {
+	public StackStateMachine (E owner, S initialState, S globalState) {
 		super(owner, initialState, globalState);
 	}
 
 	@Override
-	public void setInitialState (State<E> state) {
+	public void setInitialState (S state) {
 		if (stateStack == null) {
-			stateStack = new Array<State<E>>();
+			stateStack = new Array<S>();
 		}
 
 		this.stateStack.clear();
@@ -59,13 +67,13 @@ public class StackStateMachine<E> extends DefaultStateMachine<E> {
 	}
 
 	@Override
-	public State<E> getCurrentState () {
+	public S getCurrentState () {
 		return currentState;
 	}
 
 	/** Returns the last state of this state machine. That is the high-most state on the internal stack of previous states. */
 	@Override
-	public State<E> getPreviousState () {
+	public S getPreviousState () {
 		if (stateStack.size == 0) {
 			return null;
 		} else {
@@ -74,23 +82,25 @@ public class StackStateMachine<E> extends DefaultStateMachine<E> {
 	}
 
 	@Override
-	public void changeState (State<E> newState) {
+	public void changeState (S newState) {
 		changeState(newState, true);
 	}
 
-	/** Change state back to the previous state. That is the high-most state on the internal stack of previous states. */
+	/** Changes the Change state back to the previous state. That is the high-most state on the internal stack of previous states.
+	 * @return {@code True} in case there was a previous state that we were able to revert to. In case there is no previous state,
+	 *         no state change occurs and {@code false} will be returned. */
 	@Override
 	public boolean revertToPreviousState () {
 		if (stateStack.size == 0) {
 			return false;
 		}
 
-		State<E> previousState = stateStack.pop();
+		S previousState = stateStack.pop();
 		changeState(previousState, false);
 		return true;
 	}
 
-	private void changeState (State<E> newState, boolean pushCurrentStateToStack) {
+	private void changeState (S newState, boolean pushCurrentStateToStack) {
 		if (pushCurrentStateToStack && currentState != null) {
 			stateStack.add(currentState);
 		}
